second charge UI

--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -12,6 +12,8 @@
       text-align: center;
       white-space: nowrap;
       cursor: pointer;
+      border : 0;
+      
 
       .text {
         display: inline-block;
@@ -45,19 +47,17 @@
 .sectionsContainer {
   padding: 10px 0 0;
 
-  .sections {
-    .section {
-      display: none;
+  .sections > .section {
+    display: none;
 
-      p {
-        font-size: 18px;
-        line-height: 1.2;
-        margin-bottom: 25px;
-      }
+    p {
+      font-size: 18px;
+      line-height: 1.2;
+      margin-bottom: 25px;
+    }
 
-      &.active {
-        display: block;
-      }
+    &.active {
+      display: block;
     }
   }
 }
