firefox fix and button position

--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -13,8 +13,7 @@
       white-space: nowrap;
       cursor: pointer;
       border : 0;
-      
-
+      background-color: $colorWhite;
       .text {
         display: inline-block;
         vertical-align: middle;
