--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -19,7 +19,7 @@
 
         <div id="roles" data-roles="{{roles}}"></div>
 
-        <section class="section-course">
+        <section class="section-course section-team-members">
             <div class="container-fluid">
                 <div class="row">
                     {{#inArray "ADD_SCHOOL_MEMBERS" permissions}}
