--- a/theme/brb/style.scss
+++ b/theme/brb/style.scss
@@ -1,5 +1,5 @@
-$primaryColor: #C73C35;
-$secondaryColor: #0bf003;
+$primaryColor: #449494;
+$secondaryColor: #C73C35;
 $accentColor: #0b2bdf;
 $fontColor: #373a3c;
 
@@ -10,5 +10,3 @@ $colorGrey: rgba(232, 232, 232, 0.5);
 $colorLightGrey: rgba(0,0,0,0.1);
 $colorDarkerGrey: #555555;
 $colorWhite: #fff;
-
-$logoBackground: url("../../images/logo/web_Logo_BRB-SC_Bildmarke_mono-white.png") no-repeat center;
