--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -15,7 +15,7 @@ body {
         margin:0;
     }
     header {
-        background: $primaryColor;
+        background: $secondaryColor;
         a {
             color:#fff !important;
             font-size: 1rem;
@@ -40,8 +40,8 @@ body {
                 height: 2rem;
                 margin-top: -.25rem;
                 margin-bottom: -.5rem;
-                margin-right: .5rem;
-                background: $logoBackground;
+                margin-right: .6rem;
+                background: url("../../images/logo/main-logo-loggedout.png") no-repeat center;
                 background-size: contain;
             }
         }
@@ -52,7 +52,8 @@ body {
             .nav-link {
                 transition: background-color .3s ease-in-out;
                 &:hover{
-                    background-color: $accentColor;
+					background-color: #8f000e;
+					height: 49px;
                 }
             }
         }
