remove one scrollbar

--- a/static/styles/teams/teams.scss
+++ b/static/styles/teams/teams.scss
@@ -49,3 +49,13 @@
         }
     }
 }
+
+.section-team-members {
+    a.btn.disabled{
+      pointer-events: auto;
+    }
+}
+
+.modal-body {
+    overflow: visible;
+}
