--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -1,8 +1,9 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/courses/course.css"/>
+        <link rel="stylesheet" href="/styles/teams/teams.css"/>
         <link rel="stylesheet" href="/styles/homework/homework.css"/>
+        <link rel="stylesheet" href="/styles/teams/team.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
     {{/content}}
 
