--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -52,7 +52,7 @@ body {
             .nav-link {
                 transition: background-color .3s ease-in-out;
                 &:hover{
-					background-color: #8f000e;
+					background-color: #a90007;
 					height: 49px;
                 }
             }
