--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -106,7 +106,8 @@ aside.nav-sidebar {
     .sc-branding {
         display: block;
         padding: 12px 15px;
-        font-size: 24px;
+		font-size: 24px;
+		margin-bottom: 2px;
         background: $secondaryColor;
         color: whitesmoke;
         text-decoration: none;
