--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -162,7 +162,7 @@
                 height: 245px;
                 content: '';
                 width: 2px;
-                background: $primaryColor;
+                background: $secondaryColor;
                 right: 1px;
                 position: absolute;
                 bottom: 0px;
@@ -175,7 +175,7 @@
                 position:absolute;
                 top: -28px;
                 background: #FFFFFF;
-                color: $primaryColor;
+                color: $secondaryColor;
                 display: block;
                 z-index: 2;
             }
