update team leave icon

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -45,7 +45,7 @@
                                 class="dropdown-item dropdown-leave-team"
                                 data-user-id="{{../userId}}"
                                 redirect="/teams/">
-                                    <i class="fa fa-trash" aria-hidden="true"></i> Team verlassen
+                                    <i class="fa fa-sign-out" aria-hidden="true"></i> Team verlassen
                                 </a>
                             {{/inArray}}
                         {{/if}}
