logo and responsive optimizations

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -41,7 +41,7 @@ body {
                 margin-top: -.25rem;
                 margin-bottom: -.5rem;
                 margin-right: .6rem;
-                background: url("../../images/logo/main-logo-loggedout.png") no-repeat center;
+                background: url("../../images/logo/logo-only.png") no-repeat center;
                 background-size: contain;
             }
         }
