--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -13,6 +13,7 @@
 }
 .badge {
     display: inline-block;
+    min-width: 4em;
     padding: .25em .4em;
     font-size: 75%;
     font-weight: 700;
