--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -92,16 +92,14 @@
                         <div class="col-sm-12"></div>
                         <div class="col-sm-10 col-xs-16 col-md-8">
                             <div data-toggle="modal">
-                                <div>
-                                    <span class="btn btn-secondary create-directory">
-                                        <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
+                                <span class="btn btn-primary create-directory">
+                                    <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
+                                </span>
+                                {{#if ../canCreateFile}}
+                                    <span class="btn btn-primary new-file" data-file-path="{{this.path}}">
+                                        <i class="fa fa-plus" aria-hidden="true"></i> Neue Datei erstellen
                                     </span>
-                                    {{#if ../canCreateFile}}
-                                        <span class="btn btn-secondary new-file" data-file-path="{{this.path}}">
-                                            <i class="fa fa-plus" aria-hidden="true"></i> Neue Datei erstellen
-                                        </span>
-                                    {{/if}}
-                                </div>
+                                {{/if}}
                             </div>
                         </div>
                     {{/if}}
