--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -171,7 +171,7 @@
                                         <i class="fa fa-share-alt"></i> Freigabe-Einstellungen ändern
                                     </button>
                                     {{#if ../canCreateDir}}
-                                        <span class="btn btn-secondary create-directory">
+                                        <span class="btn btn-primary create-directory">
                                             <i class="fa fa-folder" aria-hidden="true"></i> Ordner erstellen
                                         </span>
                                     {{/if}}
