feature/SC-1230-Typo-Rework

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -441,7 +441,7 @@ footer {
     padding: 10px 0px 20px;
     line-height: 1.75rem;
 
-    h4 {
+    h4, .h4 {
         color: $primaryColor;
         float: left;
         margin-bottom: 0px;
