--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -12,7 +12,7 @@
         <section class="container-fluid section-timetable" data-step="7" data-intro="Hier findest du eine Übersicht über deinen Stundenplan und anstehende Termine.">
             <div class="row">
                 <div class="col-sm-12">
-                    <h5>Stundenplan</h5>
+                    <h2 class="h5">Stundenplan</h2>
                     <time class="selected-date">{{eventsDate}}</time>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <section class="section section-my-material">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-12"><h5>Meine Materialien</h5></div>
+                        <div class="col-sm-12"><h2 class="h5">Meine Materialien</h2></div>
                     </div>
                     <div class="row tasks card-deck-row">
                         {{#each myMaterials}}
