--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -184,7 +184,7 @@
                             <div class="col-sm-9">
                                 {{#unless notitle}}
                                   <div>
-                                      <h4 id="page-title">{{{stripOnlyScript title}}}</h4>
+                                      <h1 id="page-title" class="h4">{{{stripOnlyScript title}}}</h4>
                                   </div>
                                 {{/unless}}
                                 <div>
