--- a/static/styles/lib/bootstrap/scss/_custom.scss
+++ b/static/styles/lib/bootstrap/scss/_custom.scss
@@ -145,7 +145,7 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: 'PT Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;;
+$font-family-sans-serif: 'PT Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
@@ -178,7 +178,7 @@ $display3-weight: 300 !default;
 $display4-weight: 300 !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   inherit !default;
+$headings-font-family:   'PT Sans Narrow','PT Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $headings-font-weight:   500 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
