--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -23,12 +23,12 @@
       <div class="empty-state">
         <img src="/images/empty-states/groups.svg" alt="Keine erstellte Gruppe" class="image"/>
         {{#userHasPermission "COURSEGROUP_CREATE"}}
-          <h4>Erstelle eine Gruppe</h4>
-          <h6 class="sub-title">
+          <h2 class="h4">Erstelle eine Gruppe</h2>
+          <h3 class="h6 sub-title">
             In Gruppen können sich Teilnehmer*innen innerhalb eines Kurses in Teams aufteilen, z.B. für Gruppenarbeiten.
-          </h6>
+          </h3>
         {{else}}
-          <h4 class="text-muted">Es gibt noch keine Gruppen in diesem Kurs.</h4>
+          <h2 class="h4 text-muted">Es gibt noch keine Gruppen in diesem Kurs.</h2>
         {{/userHasPermission}}
       </div>
     {{/ifneq}}
