insert new passus

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -36,12 +36,15 @@
                             <img id="preview-logo" src="">
                             <canvas id="logo-canvas" width="35" height="35" class="hidden"></canvas>
                         </div>
-                        
+
                         <div class="form-group">
                             <label>
                                 <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
-                                Freischaltung des Messengers für einzelne Bereiche zulassen
+                                Chatfunktion aktivieren
+
                             </label>
+                            <p>(Durch Ihren Klick auf „Chatfunktion aktivieren“ bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator und befugt sind,
+                                die Chat-Funktion für Ihre Schule freizuschalten. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.)</p>
                         </div>
 
                         {{#if ../school.fileStorageType}}
