--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -38,7 +38,7 @@
                                                 </button>
                                             </form>
                                         {{else}}
-                                            <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" title="{{this.title}}">
+                                            <a class="btn btn-secondary btn-sm {{this.class}}" {{#if this.link}} href="{{this.link}}" {{/if}} title="{{this.title}}">
                                                 <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                                             </a>
                                         {{/if}}
