full width if chat deactivated

--- a/static/styles/teams/team.scss
+++ b/static/styles/teams/team.scss
@@ -41,7 +41,7 @@
     .section-members {
       margin-top: 2rem;
     }
-    .section-teams {
+    .section-teams-rocket {
       width: calc(100% - 350px);
     }
     .rocketchat {
