--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -56,6 +56,15 @@
                             </div>
                         </div>
                         {{#userHasPermission 'ADMIN_VIEW'}}
+						<div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="card h-100 teacher-option" onclick="location.href='/administration/teams/'">
+                                <div class="card-block homework">
+                                    <div class="card-text">
+                                        <h4><i class="fa fa-users"></i> Teams verwalten</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/school/'">
                                 <div class="card-block homework">
