html tags in homework description aren't escaped anymore

--- a/views/homework/components/course_overview_card_template.hbs
+++ b/views/homework/components/course_overview_card_template.hbs
@@ -13,7 +13,7 @@
         <h5 class="title">{{{stripOnlyScript this.name}}}</h5>
         <div class="description">
             {{#if this.description}}
-                {{truncateHTML (conflictFreeHtml this.description)}}
+                {{{ truncateHTML (conflictFreeHtml this.description) }}}
             {{else}}
                 keine Beschreibung vorhanden
             {{/if}}
