--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -43,7 +43,7 @@
         </h5>
         <div class="ckcontent">
             {{#if this.description}}
-            {{truncateHTML (conflictFreeHtml this.description)}}
+            {{{ truncateHTML (conflictFreeHtml this.description) }}}
             {{else}}
             keine Beschreibung vorhanden
             {{/if}}
