--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -81,7 +81,7 @@
 
     {{#if @root.submittable}}
         {{#userHasPermission "HOMEWORK_CREATE"}}
-            <button id="button-save-submission" type="submit" class="btn btn-primary btn-submit" disabled="true">Speichern</button>
+            <button type="submit" class="btn btn-primary btn-submit js-submit-btn" disabled="true">Speichern</button>
         {{/userHasPermission}}
 
         {{#if @root.submission}}
